trying to fix images vertical stretch

--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -67,6 +67,7 @@
     display: flex;
     margin: (_size(element-margin) * 1.25) 0;
     width: 50%;
+    height: auto;
 
     img {
       width: 100%;
